# muhenkan-switch

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.html  README.md  make_release_zip.ahk  mise.toml  muhenkan.ahk  release.ahk  uninstall.ahk  update.ahk  update_version.ahk
.github/workflows/: check-kanata-update.yml  check-rust-update.yml  ci.yml  release.yml
config/: app-presets.json  default-linux.toml  default-macos.toml  default-windows.toml  default.toml  search-presets.json
docs/: customize.md  default-config-research.md  design.md  development.md  key-design-philosophy.md  setup.md  snippets-research.md  testing.md  tips.md  ui-references.md  updater-signing-setup.md  windows-defender-exclusion.md
img/: keyboard.drawio
kanata/: README.md  muhenkan-macos.kbd  muhenkan.kbd
legacy/: README.md
muhenkan-switch/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
muhenkan-switch-config/: Cargo.toml
muhenkan-switch-config/src/: lib.rs  svg.rs
muhenkan-switch-core/: Cargo.toml
muhenkan-switch-core/src/: main.rs
muhenkan-switch/capabilities/: default.json
muhenkan-switch/frontend/: eslint.config.js  help.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
muhenkan-switch/icons/: icon.icns
muhenkan-switch/nsis/: hooks.nsh
muhenkan-switch/src/: commands.rs  kanata.rs  main.rs  tray.rs
scripts/: install.ps1  uninstall.bat
scripts/dev/: build.sh  check-deps.sh  dev.sh  fetch-kanata.py  fetch-kanata.sh  release.sh  reset-uinput.sh  setup.sh  sync-kanata-version.sh  (+1 more)
(+64 files in other folders)
